add chat input command handling

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
       "plugin:unicorn/recommended"
     ],
     "rules": {
+      "default-case": "off",
       "@typescript-eslint/naming-convention": "off",
       "@typescript-eslint/no-implicit-any-catch": "off"
     }
