add Dockerfile and deploy action

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "scripts": {
     "build": "tsc",
     "lint": "xo",
-    "test": "ava"
+    "test": "ava",
+    "deploy": "node build/deploy"
   },
   "xo": {
     "prettier": true,
