--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,9 @@
 
     // Emit
     "outDir": "build",
-    "sourceMap": true,
 
     // Language and Environment
     "target": "ES2022",
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "test/**/*.ts", "deploy/**/*"]
 }
