--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "devDependencies": {
     "@types/node": "18.14.6",
-    "ava": "5.2.0",
     "typescript": "4.9.5",
     "xo": "0.53.1"
   },
@@ -31,8 +30,11 @@
   "scripts": {
     "build": "tsc",
     "lint": "xo",
-    "test": "ava",
-    "deploy": "node build/deploy"
+    "deploy": "node build//deploy/deploy.js"
+  },
+  "prettier": {
+    "bracketSpacing": true,
+    "printWidth": 160
   },
   "xo": {
     "prettier": true,
@@ -45,11 +47,8 @@
     "rules": {
       "default-case": "off",
       "@typescript-eslint/naming-convention": "off",
-      "@typescript-eslint/no-implicit-any-catch": "off"
+      "@typescript-eslint/no-implicit-any-catch": "off",
+      "unicorn/prevent-abbreviations": "off"
     }
-  },
-  "prettier": {
-    "bracketSpacing": true,
-    "printWidth": 160
   }
 }
