--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 
     // Modules
     "module": "NodeNext",
+    "resolveJsonModule": true,
 
     // Emit
     "outDir": "build",
@@ -13,5 +14,5 @@
     // Language and Environment
     "target": "ES2022",
   },
-  "include": ["src/**/*.ts", "test/**/*.ts", "deploy/**/*"]
+  "include": ["src/**/*", "deploy/**/*"]
 }
