--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "type": "module",
   "dependencies": {
     "discord.js": "14.7.1",
-    "pino": "8.11.0"
+    "pino": "8.11.0",
+    "sharp": "0.31.3"
   },
   "devDependencies": {
     "@types/node": "18.14.6",
+    "@types/sharp": "0.31.1",
     "typescript": "4.9.5",
     "xo": "0.53.1"
   },
