--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "devDependencies": {
     "@types/node": "18.15.3",
     "@types/sharp": "0.31.1",
+    "@vitest/coverage-c8": "0.29.3",
     "typescript": "5.0.2",
+    "vitest": "0.29.3",
     "xo": "0.53.1"
   },
   "optionalDependencies": {
@@ -32,7 +34,8 @@
   "scripts": {
     "build": "tsc",
     "lint": "xo",
-    "deploy": "node build/deploy/deploy.js"
+    "deploy": "node build/deploy/deploy.js",
+    "test": "vitest run --coverage"
   },
   "prettier": {
     "bracketSpacing": true,
