--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rules": {
       "default-case": "off",
       "max-params": "off",
+      "no-return-assign": "off",
       "@typescript-eslint/explicit-function-return-type": "error",
       "@typescript-eslint/naming-convention": "off",
       "@typescript-eslint/no-implicit-any-catch": "off",
