initial db stuff

--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "type": "module",
   "dependencies": {
     "discord.js": "14.8.0",
+    "mongodb": "5.1.0",
     "pino": "8.11.0",
     "sharp": "0.32.0"
   },
   "devDependencies": {
-    "@types/node": "18.15.9",
-    "@vitest/coverage-c8": "0.29.7",
-    "typescript": "5.0.2",
-    "vitest": "0.29.7",
+    "@types/node": "18.15.11",
+    "@vitest/coverage-c8": "0.29.8",
+    "typescript": "5.0.3",
+    "vitest": "0.29.8",
     "xo": "0.53.1"
   },
   "optionalDependencies": {
