Revert "start reorganizing"
This reverts commit 19fc20766c9e02a0bee4030820b7c725158caa62.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,8 @@ on:
     branches: [main]
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./bot
 
     strategy:
       matrix:
