--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,12 +7,8 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./bot
 
     strategy:
       matrix:
