--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": ">=18.14.0"
+    "node": ">=20.5.0"
   },
   "dependencies": {
-    "discord.js": "14.11.0",
-    "mongodb": "5.4.0",
-    "pino": "8.12.1",
-    "sharp": "0.32.1"
+    "@j164/bot-framework": "0.3.1",
+    "discord.js": "14.12.1",
+    "mongodb": "5.7.0",
+    "pino": "8.15.0",
+    "sharp": "0.32.4"
   },
   "devDependencies": {
-    "@types/node": "18.16.5",
-    "@vitest/coverage-c8": "0.31.0",
-    "typescript": "5.0.4",
-    "vitest": "0.31.0",
-    "xo": "0.54.2"
+    "@types/node": "20.4.10",
+    "@types/node-cron": "3.0.8",
+    "@vitest/coverage-v8": "0.34.1",
+    "typescript": "5.1.6",
+    "vitest": "0.34.1",
+    "xo": "0.56.0"
   },
   "optionalDependencies": {
     "bufferutil": "4.0.7",
